added css for weather

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,12 @@ body {
     margin-right: 10px;
 }
 
-.humidity,.wind {
+.humidity,
+.wind {
     font-size: 28px;
     margin-top: -6px;
+}
+
+.weather {
+    display: none;
 }
